# Axion

./: .dockerignore  .gitignore  COMPLIANCE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
capture/: Cargo.toml
capture/axion-capture/: Cargo.toml
capture/axion-capture-ebpf/: Cargo.toml
capture/axion-capture-ebpf/src/: main.rs
capture/axion-capture/src/: anomaly.rs  capture.rs  config.rs  ddos.rs  forwarder.rs  main.rs  tests.rs
configs/: config.yaml
dashboard/: package-lock.json  package.json  svelte.config.js  vite.config.js
dashboard/src/: app.html
deploy/: Dockerfile.capture  Dockerfile.server-go  axion-agent.service  axion-go-server.service  axion-server.service
migrations/: 001_initial.sql
scripts/: Axion_start.bat  activate-dev.sh  archive.py  axion.sh  backup.py  build_sqlcipher.sh  gen_dev_cert.sh  retention.py  setup-dev.sh
server-go/: go.mod  go.sum  main.go
server-go/db/: postgres.go  postgres_test.go
server-go/handlers/: alerts.go  audit.go  auth.go  handlers.go  handlers_test.go  incidents.go  ws.go
server-go/middleware/: auth.go  cors.go  headers.go  middleware_test.go  ratelimit.go
server-go/models/: models.go
tacnet_sec/: cli.py
tacnet_sec/core/: anomaly.py  bus.py  capture.py  forwarder.py  siem.py  store.py  throttle.py  utils.py
tacnet_sec/detectors/: arp.py  beaconing.py  ddos.py  insider.py  iot.py  lateral.py  malware.py  portscan.py
tacnet_sec/responders/: actions.py
tacnet_sec/server/: api.py  auth.py  correlator.py
tacnet_sec/tests/: test_correlator.py  test_detectors.py  (+2 more)
(+8 files in other folders)
